--- a/all.css
+++ b/all.css
@@ -94,7 +94,7 @@ img{
 }
 @media(max-width:850px){
     .header{
-        margin-top: -100px;
+        margin-top: -300px;
     }
 }
 @media(max-width:420px){
@@ -279,6 +279,13 @@ img{
     position: absolute;
     top: -21px;
 }
+@media(max-width:850px){
+    .ContainerBc128 .notice .noticeTitle span{
+        font-size: 24px;
+        top: 0;
+        padding-left: 1em;
+    }
+}
 @media(max-width:420px){
     .ContainerBc128 .notice .noticeTitle span{
         font-size: 16px;
@@ -301,6 +308,13 @@ img{
     position: absolute;
     right: 0;
 }
+@media(max-width:850px){
+    .ContainerBc128 .notice .noticeTitle .upLine{
+        height: 3px;
+        width: 80%;
+        margin-right: 1em;
+    }
+}
 @media(max-width:420px){
     .ContainerBc128 .notice .noticeTitle .upLine{
         height: 2px;
@@ -321,6 +335,12 @@ img{
     border: none;
     background-color: rgb(243,243,243);
     margin-top: 2em;
+}
+@media(max-width:850px){
+    .ContainerBc128 .notice .downLine{
+        height: 3px;
+        width: 96%;
+    }
 }
 @media(max-width:420px){
     .ContainerBc128 .notice .downLine{
@@ -389,8 +409,7 @@ img{
 }
 @media(max-width:850px){
     .ContainerBc128 .indexPicBox .signImg{
-        /* display: none; */
-        right: 5px;
+        right: 65px;
         top: 85px;
         width: 33%;
     }
@@ -402,9 +421,9 @@ img{
 }
 @media(max-width:850px){
     .ContainerBc128 .indexPicBox .indexBig{
-        position: static;
-        width: 70%;
-        margin-left: 4em;
+        width: 65%;
+        left: 5em;
+        top: 110px;
     }
 }
 @media(max-width:420px){
@@ -616,6 +635,11 @@ img{
 .footer .imgBox img{
     width: 450px;
 }
+@media(max-width:850px){
+    .footer .imgBox img{
+        width: 370px;
+    }
+}
 @media(max-width:420px){
     .footer .imgBox img{
         width: 250px;
@@ -628,6 +652,11 @@ img{
 }
 .footer .imgBox .searchImg{
     width: 250px;
+}
+@media(max-width:850px){
+    .footer .imgBox .searchImg{
+        width: 200px;
+    }
 }
 @media(max-width:420px){
     .footer .imgBox .searchImg{
@@ -656,6 +685,11 @@ img{
 .footer .informationBoxiconBox .informationBox p{
     color: rgb(243,243,243);
     margin-bottom: 1em;
+}
+@media(max-width:850px){
+    .footer .informationBoxiconBox .informationBox p{
+        font-size: 14px;
+    }
 }
 @media(max-width:420px){
     .footer .informationBoxiconBox .informationBox p{
@@ -697,6 +731,12 @@ img{
 }
 .footer .informationBoxiconBox .iconBox img{
     width: 50px;
+}
+@media(max-width:850px){
+    .footer .informationBoxiconBox .iconBox img{
+        width: 35px;
+        margin-left: 0.5em;
+    }
 }
 @media(max-width:420px){
     .footer .informationBoxiconBox .iconBox img{
