--- a/all.css
+++ b/all.css
@@ -258,14 +258,34 @@ img{
 .ContainerBc128 .notice{
     margin-top: 16em;
 }
-@media(max-width:420px){
+@media(max-width:800px){
+    .ContainerBc128 .notice{
+        margin-top: 11em;
+    }
+}
+@media(max-width:765px){
+    .ContainerBc128 .notice{
+        margin-top: 9em;
+    }
+}
+@media(max-width:600px){
     .ContainerBc128 .notice{
         margin-top: 7em;
     }
 }
+@media(max-width:505px){
+    .ContainerBc128 .notice{
+        margin-top: 3em;
+    }
+}
+@media(max-width:420px){
+    .ContainerBc128 .notice{
+        margin-top: 6em;
+    }
+}
 @media(max-width:320px){
     .ContainerBc128 .notice{
-        margin-top: 7em;
+        margin-top: 4em;
     }
 }
 .ContainerBc128 .notice .noticeTitle{
@@ -286,18 +306,34 @@ img{
         padding-left: 1em;
     }
 }
+@media(max-width:800px){
+    .ContainerBc128 .notice .noticeTitle span{
+        font-size: 22px;
+    }
+}
+@media(max-width:690px){
+    .ContainerBc128 .notice .noticeTitle span{
+        font-size: 18px;
+    }
+}
+@media(max-width:580px){
+    .ContainerBc128 .notice .noticeTitle span{
+        font-size: 17px;
+    }
+}
+@media(max-width:505px){
+    .ContainerBc128 .notice .noticeTitle span{
+        font-size: 15px;
+    }
+}
 @media(max-width:420px){
     .ContainerBc128 .notice .noticeTitle span{
-        font-size: 16px;
-        top: 0;
-        padding-left: 1em;
+        font-size: 13px;
     }
 }
 @media(max-width:320px){
     .ContainerBc128 .notice .noticeTitle span{
         font-size: 10px;
-        top: 0;
-        padding-left: 1em;
     }
 }
 .ContainerBc128 .notice .noticeTitle .upLine{
@@ -315,16 +351,27 @@ img{
         margin-right: 1em;
     }
 }
-@media(max-width:420px){
+@media(max-width:765px){
     .ContainerBc128 .notice .noticeTitle .upLine{
         height: 2px;
-        width: 72%;
-        margin-right: 1em;
+        width: 79%;
+    }
+}
+@media(max-width:580px){
+    .ContainerBc128 .notice .noticeTitle .upLine{
+        height: 2px;
+        width: 75%;
+    }
+}
+@media(max-width:505px){
+    .ContainerBc128 .notice .noticeTitle .upLine{
+        height: 2px;
+        width: 76%;
     }
 }
 @media(max-width:320px){
     .ContainerBc128 .notice .noticeTitle .upLine{
-        height: 2px;
+        height: 1px;
         width: 75%;
         margin-right: 0.6em;
     }
@@ -342,6 +389,12 @@ img{
         width: 96%;
     }
 }
+@media(max-width:765px){
+    .ContainerBc128 .notice .downLine{
+        height: 2px;
+        width: 94%;
+    }
+}
 @media(max-width:420px){
     .ContainerBc128 .notice .downLine{
         height: 2px;
@@ -350,8 +403,8 @@ img{
 }
 @media(max-width:320px){
     .ContainerBc128 .notice .downLine{
-        height: 2px;
         width: 95%;
+        height: 1px;
         margin-top: 1em;
     }
 }
@@ -361,9 +414,29 @@ img{
     margin-left: 5em;
     margin-right: 1em;
 }
-@media(max-width:420px){
+@media(max-width:800px){
+    .ContainerBc128 .notice .noticeContent p{
+        font-size: 14px;
+    }
+}
+@media(max-width:690px){
+    .ContainerBc128 .notice .noticeContent p{
+        font-size: 12px;
+    }
+}
+@media(max-width:600px){
+    .ContainerBc128 .notice .noticeContent p{
+        font-size: 11px;
+    }
+}
+@media(max-width:505px){
     .ContainerBc128 .notice .noticeContent p{
         font-size: 10px;
+    }
+}
+@media(max-width:420px){
+    .ContainerBc128 .notice .noticeContent p{
+        font-size: 8px;
     }
 }
 @media(max-width:320px){
@@ -374,6 +447,11 @@ img{
 .ContainerBc128 .notice .noticeContent .noticeContentOne{
     margin-top: 3em;
 }
+@media(max-width:420px){
+    .ContainerBc128 .notice .noticeContent .noticeContentOne{
+        margin-top: 4em;
+    }
+}
 @media(max-width:320px){
     .ContainerBc128 .notice .noticeContent .noticeContentOne{
         margin-top: 4em;
@@ -383,9 +461,29 @@ img{
     color: rgb(243,243,243);
     margin-left: 6em;
 }
-@media(max-width:420px){
+@media(max-width:800px){
+    .ContainerBc128 .notice .noticeContent span{
+        font-size: 14px;
+    }
+}
+@media(max-width:690px){
+    .ContainerBc128 .notice .noticeContent span{
+        font-size: 12px;
+    }
+}
+@media(max-width:600px){
+    .ContainerBc128 .notice .noticeContent span{
+        font-size: 11px;
+    }
+}
+@media(max-width:505px){
     .ContainerBc128 .notice .noticeContent span{
         font-size: 10px;
+    }
+}
+@media(max-width:420px){
+    .ContainerBc128 .notice .noticeContent span{
+        font-size: 8px;
     }
 }
 @media(max-width:320px){
@@ -414,6 +512,25 @@ img{
         width: 33%;
     }
 }
+@media(max-width:800px){
+    .ContainerBc128 .indexPicBox .signImg{
+        top: 89px;
+        width: 28%;
+    }
+}
+@media(max-width:690px){
+    .ContainerBc128 .indexPicBox .signImg{
+        top: 98px;
+        width: 20%;
+    }
+}
+@media(max-width:420px){
+    .ContainerBc128 .indexPicBox .signImg{
+        top: 90px;
+        right: 30px;
+        width: 25%;
+    }
+}
 .ContainerBc128 .indexPicBox .indexBig{
     position: absolute;
     width: 70%;
@@ -429,16 +546,16 @@ img{
 @media(max-width:420px){
     .ContainerBc128 .indexPicBox .indexBig{
         position: absolute;
-        width: 70%;
-        right: 4.8em;
+        width: 65%;
+        left: 3.5em;
         top: 100px;
     }
 }
 @media(max-width:320px){
     .ContainerBc128 .indexPicBox .indexBig{
         position: absolute;
-        width: 70%;
-        right: 4.8em;
+        width: 62%;
+        right: 1em;
         top: 100px;
     }
 }
@@ -462,6 +579,13 @@ img{
 @media(max-width:765px){
     .ContainerBc128 .indexPicBox .qrCodeBox{
         top: 13em;
+        right: 3em;
+        width: 22%;
+    }
+}
+@media(max-width:600px){
+    .ContainerBc128 .indexPicBox .qrCodeBox{
+        top: 12em;
         right: 3em;
         width: 22%;
     }
@@ -496,6 +620,18 @@ img{
         font-size: 10px;
     }
 }
+@media(max-width:690px){
+    .ContainerBc128 .indexPicBox .qrCodeBox .orderTitle{
+        font-size: 8px;
+        letter-spacing: 3px;
+    }
+}
+@media(max-width:505px){
+    .ContainerBc128 .indexPicBox .qrCodeBox .orderTitle{
+        font-size: 7px;
+        letter-spacing: 1px;
+    }
+}
 @media(max-width:420px){
     .ContainerBc128 .indexPicBox .qrCodeBox .orderTitle{
         font-size: 6px;
@@ -528,6 +664,12 @@ img{
         margin-top: 10px;
     }
 }
+@media(max-width:690px){
+    .ContainerBc128 .indexPicBox .qrCodeBox .orderLine{
+        height: 1px;
+        width: 50px;
+    }
+}
 @media(max-width:420px){
     .ContainerBc128 .indexPicBox .qrCodeBox .orderLine{
         width: 40px;
@@ -553,6 +695,16 @@ img{
 @media(max-width:765px){
     .ContainerBc128 .indexPicBox .qrCodeBox .joinText{
         font-size: 8px;
+    }
+}
+@media(max-width:690px){
+    .ContainerBc128 .indexPicBox .qrCodeBox .joinText{
+        font-size: 6px;
+    }
+}
+@media(max-width:505px){
+    .ContainerBc128 .indexPicBox .qrCodeBox .joinText{
+        font-size: 5px;
     }
 }
 @media(max-width:420px){
@@ -603,6 +755,16 @@ img{
         font-size: 8px;
     }
 }
+@media(max-width:690px){
+    .ContainerBc128 .indexPicBox .qrCodeBox .lineidText{
+        font-size: 6px;
+    }
+}
+@media(max-width:505px){
+    .ContainerBc128 .indexPicBox .qrCodeBox .lineidText{
+        font-size: 5px;
+    }
+}
 @media(max-width:420px){
     .ContainerBc128 .indexPicBox .qrCodeBox .lineidText{
         font-size: 4px;
@@ -640,9 +802,19 @@ img{
         width: 370px;
     }
 }
+@media(max-width:690px){
+    .footer .imgBox img{
+        width: 300px;
+    }
+}
+@media(max-width:505px){
+    .footer .imgBox img{
+        width: 270px;
+    }
+}
 @media(max-width:420px){
     .footer .imgBox img{
-        width: 250px;
+        width: 200px;
     }
 }
 @media(max-width:320px){
@@ -658,9 +830,19 @@ img{
         width: 200px;
     }
 }
+@media(max-width:690px){
+    .footer .imgBox .searchImg{
+        width: 150px;
+    }
+}
+@media(max-width:505px){
+    .footer .imgBox .searchImg{
+        width: 110px;
+    }
+}
 @media(max-width:420px){
     .footer .imgBox .searchImg{
-        width: 100px;
+        width: 90px;
     }
 }
 @media(max-width:320px){
@@ -691,9 +873,19 @@ img{
         font-size: 14px;
     }
 }
+@media(max-width:690px){
+    .footer .informationBoxiconBox .informationBox p{
+        font-size: 12px;
+    }
+}
+@media(max-width:505px){
+    .footer .informationBoxiconBox .informationBox p{
+        font-size: 11px;
+    }
+}
 @media(max-width:420px){
     .footer .informationBoxiconBox .informationBox p{
-        font-size: 10px;
+        font-size: 8px;
     }
 }
 @media(max-width:320px){
@@ -715,7 +907,7 @@ img{
     align-items: end;
     margin-bottom: 1em;
 }
-@media(max-width:420px){
+@media(max-width:690px){
     .footer .informationBoxiconBox .iconBox{
         justify-content: center;
     }
@@ -738,10 +930,22 @@ img{
         margin-left: 0.5em;
     }
 }
+@media(max-width:690px){
+    .footer .informationBoxiconBox .iconBox img{
+        width: 30px;
+        margin-left: 1em;
+    }
+}
+@media(max-width:505px){
+    .footer .informationBoxiconBox .iconBox img{
+        width: 27px;
+        margin-left: 1em;
+    }
+}
 @media(max-width:420px){
     .footer .informationBoxiconBox .iconBox img{
-        width: 25px;
-        margin-left: 0.5em;
+        width: 22px;
+        margin-left: 0.8em;
     }
 }
 @media(max-width:320px){
