--- a/all.css
+++ b/all.css
@@ -209,10 +209,10 @@ img{
 .ContainerBc128 .mapBox{
     display: flex;
     justify-content: center;
-    margin-top: 1.5em;
+    margin-top: 16em;
 }
 .ContainerBc128 .mapBox img{
-    width: 75%;
+    width: 100%;
 }
 .footer{
     margin-top: 2em;
@@ -473,11 +473,15 @@ img{
     text-decoration: none;
 }
 .classOneBox span{
-    color: rgb(210,210,210);
+    color: rgb(128,128,128);
     cursor: pointer;
 }
 .classOneBox .color128{
     color: rgb(128,128,128);
+    border: 2px dashed rgb(188,143,143);
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 3px;
 }
 .picContainer{
     margin-top: 6em;
@@ -514,15 +518,15 @@ img{
     margin-right: 6em;
     margin-bottom: 1em;
     letter-spacing: 3px;
-    font-weight: normal;
+    font-weight: 900;
     font-size: 30px;
     color: rgb(188,143,143);
 }
 .picContainer .imgText .imgSlogon .OneSlogonTitle{
-    margin-right: 4em;
+    margin-right: 6.3em;
     margin-bottom: 1em;
     letter-spacing: 5px;
-    font-weight: normal;
+    font-weight: 900;
     font-size: 30px;
     color: rgb(188,143,143);
 }
@@ -530,7 +534,7 @@ img{
     margin-right: 5em;
     margin-bottom: 1em;
     letter-spacing: 5px;
-    font-weight: normal;
+    font-weight: 900;
     font-size: 30px;
     color: rgb(188,143,143);
 }
@@ -558,7 +562,7 @@ img{
 .classOneBox .allContent{
     width: 900px;
     padding-right: 2em;
-    padding-top: 3em;
+    padding-top: 4em;
 }
 .classOneBox .allContent .squareText{
     display: flex;
@@ -595,9 +599,8 @@ img{
     align-items: center;
 }
 .schoolTimetable{
-    max-width: 900px;
-    margin-top: 1em;
-    margin-top: 120px;
+    max-width: 100%;
+    margin-top: 4em;
 }
 .schoolTimetable p{
     text-align: center;
@@ -666,10 +669,22 @@ img{
 .schoolTimetable table .dateContent span{
     font-size: 14px;
     letter-spacing: 2px;
+    font-weight: 900;
+}
+.schoolTimetable table .dateContent .personalClass{
+    font-size: 14px;
+    letter-spacing: 2px;
+    background-color: rgb(188,143,143);
+    color: #fff;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 5px;
+    border-radius: 4px;
+    font-weight: 900;
 }
 .courseOrder,.classCaption{
     width: 900px;
-    margin-top: 4em;
+    margin-top: 7em;
 }
 .courseOrder p,.classCaption p{
     text-align: center;
@@ -755,8 +770,12 @@ img{
 }
 .courseOrder .orderBox .orderBoxContentAndImg{
     display: flex;
+    flex-direction: column;
 }
 .courseOrder .orderBox .orderBoxContentAndImg img{
     width: 100px;
-    margin-left: 2em;
+    margin-left: 2.4em;
+}
+.courseOrder .orderBox .orderBoxContentAndImg .orderBoxContent{
+    margin-top: 10px;
 }
