--- a/all.css
+++ b/all.css
@@ -477,8 +477,8 @@ img{
     cursor: pointer;
 }
 .classOneBox .color128{
-    color: rgb(128,128,128);
-    border: 2px dashed rgb(188,143,143);
+    color: #fff;
+    background-color: rgb(188,143,143);
     padding-left: 5px;
     padding-right: 5px;
     border-radius: 3px;
