--- a/all.css
+++ b/all.css
@@ -371,7 +371,7 @@ img{
     padding-left: 2em;
     position: relative;
 }
-.contentContainer .year2024{
+.contentContainer .year2022,.contentContainer .year2023,.contentContainer .year2024{
     color: rgb(182,182,182);
     font-size: 28px;
     font-weight: 900;
@@ -380,7 +380,7 @@ img{
     position: absolute;
     left: -5em;
 }
-.contentContainer .year2024 hr,.contentContainer .year2023 hr{
+.contentContainer .year2024 hr,.contentContainer .year2023 hr,.contentContainer .year2022 hr{
     height: 5px;
     border: none;
     background-color: rgb(182,182,182);
@@ -523,7 +523,7 @@ img{
     color: rgb(188,143,143);
 }
 .picContainer .imgText .imgSlogon .OneSlogonTitle{
-    margin-right: 6.3em;
+    margin-right: 4em;
     margin-bottom: 1em;
     letter-spacing: 5px;
     font-weight: 900;
@@ -539,7 +539,9 @@ img{
     color: rgb(188,143,143);
 }
 .picContainer .imgText .imgSlogon .OneSlogonSmallTextOne{
-    margin-right: 13.2em;
+    margin-right: 17.8em;
+    line-height: 36px;
+    font-size: 16px;
     color: #000;
     letter-spacing: 3px;
 }
@@ -617,6 +619,13 @@ img{
 }
 .schoolTimetable table{
     text-align: center;
+    border: 3px solid rgb(188,143,143);
+}
+.schoolTimetable table tr{
+    border-bottom: 1px solid rgb(188,143,143);
+}
+.schoolTimetable table tr td{
+    border-left: 1px solid rgb(188,143,143);
 }
 .schoolTimetable table .dayBorder{
     width: 180px;
@@ -629,32 +638,12 @@ img{
     width: 180px;
     height: 50px;
     line-height: 50px;
-    border-bottom: 1px dashed rgb(188,143,143);
-    border-right: 1px dashed rgb(188,143,143);
-    border-top: 1px dashed rgb(188,143,143);
 }
 .schoolTimetable table .topDateColor{
     color: rgb(188,143,143);
     width: 180px;
-    height: 50px;
-    line-height: 50px;
-    border: 1px dashed rgb(188,143,143);
-}
-/* .schoolTimetable table .leftDashed{
-    color: rgb(188,143,143);
-    width: 180px;
-    height: 50px;
-    line-height: 50px;
-    border-bottom: 1px dashed rgb(188,143,143);
-    border-right: 1px dashed rgb(188,143,143);
-    border-top: 1px dashed rgb(188,143,143);
-    border-left: 1px dashed rgb(188,143,143);
-} */
-.schoolTimetable table .dateContent{
-    width: 180px;
-    height: 50px;
-    line-height: 40px;
-    color: rgb(188,143,143);
+    height: 80px;
+    line-height: 80px;
 }
 .schoolTimetable table .dateContent p{
     background-color: rgb(188,143,143);
@@ -674,13 +663,12 @@ img{
 .schoolTimetable table .dateContent .personalClass{
     font-size: 14px;
     letter-spacing: 2px;
-    background-color: rgb(188,143,143);
     color: #fff;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    padding-left: 5px;
-    border-radius: 4px;
     font-weight: 900;
+}
+.schoolTimetable table .dateContentColor{
+    background-color: rgb(188,143,143);
+    text-align: center;
 }
 .courseOrder,.classCaption{
     width: 900px;
@@ -698,12 +686,35 @@ img{
     background-color: rgb(188,143,143);
     border: none;
 }
+.classCaption .classCaptionTitle{
+    font-size: 20px;
+    text-align: left;
+}
+.classCaption .classCaptionContent{
+    font-size: 14px;
+    padding: 1em 0 1em 3em;
+}
+.classCaption .classCaptionContent span{
+    line-height: 18px;
+    letter-spacing: 2px;
+}
+.courseOrder .orderBox{
+    border: 1px solid rgb(188,143,143);
+    margin-top: 1em;
+}
 .courseOrder .orderBoxContentAndHr{
     display: flex;
-    align-items: center;
-    margin-top: 3em;
+    justify-content: center;
+    margin-top: 1em;
     margin-bottom: 1em;
     position: relative;
+}
+.courseOrder .orderBoxContentAndHr .bigSmallTitleBox p{
+    font-size: 18px;
+    margin-top: 0.5em;
+    cursor: pointer;
+    text-align: center;
+    font-weight: 900;
 }
 .courseOrder .orderBoxContentAndHr .eyeOneContent{
     position: absolute;
@@ -731,12 +742,6 @@ img{
     text-decoration: none;
     color: rgb(188,143,143);
 }
-.courseOrder .orderBoxContentAndHr .sTitle{
-    font-size: 14px;
-    margin-left: 6em;
-    margin-top: 0.5em;
-    cursor: pointer;
-}
 .courseOrder .orderBox .orderBoxContentAndHr hr{
     width: 50%;
     height: 1px;
@@ -751,10 +756,14 @@ img{
 }
 .courseOrder .orderBoxContent p{
     text-align: left;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: normal;
     margin-bottom: 0.5em;
     padding-left: 3.5em;
+}
+.courseOrder .orderBoxContent .orderBoxContentSmalltitle{
+    font-weight: 900;
+    font-size: 16px;
 }
 .courseOrder .orderBoxContent p a{
     font-size: 14px;
@@ -762,20 +771,31 @@ img{
     text-decoration: none;
     color: rgb(188,143,143);
 }
+.courseOrder .orderBoxContent .clickColor{
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
 .courseOrder .orderBox .bottomHr{
     height: 1px;
     background-color: rgb(188,143,143);
     border: none;
     margin-top: 1em;
 }
-.courseOrder .orderBox .orderBoxContentAndImg{
+.schoolTimetable .orderBoxContentAndImgContainer{
+    display: flex;
+    justify-content: center;
+}
+.schoolTimetable .orderBoxContentAndImgContainer .orderBoxContentAndImg{
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
-.courseOrder .orderBox .orderBoxContentAndImg img{
+.schoolTimetable .orderBoxContentAndImgContainer .orderBoxContentAndImg img{
     width: 100px;
-    margin-left: 2.4em;
+    margin-top: 1em;
+    margin-bottom: 0.5em;
 }
-.courseOrder .orderBox .orderBoxContentAndImg .orderBoxContent{
-    margin-top: 10px;
+.schoolTimetable .orderBoxContentAndImgContainer .orderBoxContentAndImg .orderBoxContent p{
+    font-size: 12px;
+    margin-bottom: 0.5em;
 }
