--- a/all.css
+++ b/all.css
@@ -689,13 +689,14 @@ img{
 .classCaption .classCaptionTitle{
     font-size: 20px;
     text-align: left;
+    margin-top: 1em;
 }
 .classCaption .classCaptionContent{
     font-size: 14px;
-    padding: 1em 0 1em 3em;
+    padding: 1em 0 2em 3em;
 }
 .classCaption .classCaptionContent span{
-    line-height: 18px;
+    line-height: 35px;
     letter-spacing: 2px;
 }
 .courseOrder .orderBox{
